--- a/Ejemplo3/style.css
+++ b/Ejemplo3/style.css
@@ -1,5 +1,6 @@
 body {
-    border: 3px solid red;
+    display: flex;
+    border: 2px solid red;
     height: 100vh;
     width: 100vw;
     justify-content: center;
@@ -7,10 +8,66 @@ body {
 }
 
 .contenedor-principal {
+    position: relative;
     display: flex;
-    border: 5px solid black;
-    width: 50%;
-    height: 50%;
+    border: 2px solid black;
+    width: 35%;
+    height: 60%;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    border-radius: 2rem;
 }
+
+.contenedor-principal::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 45%;
+    background-color: rgb(0, 72, 255);
+    border-radius: 2rem 2rem 0 0;
+}
+.image-perfil {
+    height: 100%;
+    width: 100%;
+}
+
+.contenedor-imagen {
+    position: relative;
+    border: 5px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    width: 15rem;
+    height: 15rem;
+    overflow: hidden;
+}
+
+.contenedor-botones {
+    display: flex;
+    flex-direction: row;
+    width: 30rem;
+    height: 5rem;
+    border: 3px solid rgb(0, 94, 255);
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contenedor-botones a {
+    display: inline-block;
+    width: 5rem;
+    height: 80%;
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 50%;
+}
+
+.link img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.link:hover {
+    box-shadow: 0 0 2rem black;
+    cursor: pointer;
+}
+
