--- a/Ejemplo4/style.css
+++ b/Ejemplo4/style.css
@@ -1,13 +1,67 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    display: flex;
-    border: 2px solid red;
-    height: 100vh;
     width: 100vw;
-    justify-content: center;
+}
+
+.header {
+    display: flex;
+    width: 100%;
+    height: 20vh;
+    border: 2px solid black;
+    justify-content: space-between;
     align-items: center;
 }
 
-h1 {
+.header .navbar {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid red;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    width: 30vw;
+}
+
+.navbar a {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 20%;
+    height: 50%;
+    border: 2px solid red;
+    border-radius: 50%;
+}
+
+.link img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.link:hover {
+    box-shadow: 0 0 2rem black;
+    cursor: pointer;
+}
+
+section {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: 100vw;
     height: 100vh;
-    width: 100vw;   
+    border: 2px solid purple;
+}
+
+.contenedor-texto {
+    margin: 3rem;
+    width: 50%;
+}
+
+.contenedor-texto h1 {
+    font-size: 10rem;
 }
